k8s/manifests/deployment.yaml
<<<<<<< HEAD
# This is a sample deployment manifest file for a simple web application.
=======
>>>>>>> 7095e72 (Containerization)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app
<<<<<<< HEAD
        image: <docker-user-name>/go-web-app
        ports:
        - containerPort: 8080
=======
        image: hopenfaith/go-web-app
        ports:
        - containerPort: 8080
    
>>>>>>> 7095e72 (Containerization)
