k8s/manifests/service.yaml
<<<<<<< HEAD
# Service for the application
=======
>>>>>>> 7095e72 (Containerization)
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
<<<<<<< HEAD
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: go-web-app
  type: ClusterIP
=======
 ports:
 - port: 80
   targetPort: 8080
   protocol: TCP
 selector:
   app: go-web-app
 type: ClusterIP
>>>>>>> 7095e72 (Containerization)
