k8s/manifests/ingress.yaml
<<<<<<< HEAD
# Ingress resource for the application
=======
>>>>>>> 7095e72 (Containerization)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
<<<<<<< HEAD
  - host: go-web-app.local
    http:
      paths: 
=======
  - host: go-web-app.local 
    http:
      paths:
>>>>>>> 7095e72 (Containerization)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
<<<<<<< HEAD

=======
>>>>>>> 7095e72 (Containerization)
